Fix disappearing intro text on small screens

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,5 +28,20 @@ p {
 }
 
 .navbar {
+    background: #ccc;
+}
+
+.intro-text {
     background: #ddd;
+    border-radius: 4px;
+}
+
+.intro-text p {
+    font-size: 1.65em;
+    padding: 10px 0;
+    margin: 0;
+}
+
+.navbar {
+    margin-bottom: 0;
 }
